Fix asset references that break on android to use relative paths.

--- a/src/pages/event-list/event-list.scss
+++ b/src/pages/event-list/event-list.scss
@@ -1,5 +1,5 @@
 page-event-list {
   .event {
-    background-image: url('/assets/img/blue.jpg');
+    background-image: url('../assets/img/blue.jpg');
   }
 }
