--- a/src/pages/event/event.scss
+++ b/src/pages/event/event.scss
@@ -1,6 +1,6 @@
 page-event {
   .event {
-    background-image: url('/assets/img/ribbons.jpg');
+    background-image: url('assets/img/ribbons.jpg');
     height: 160px;
   }
 
