--- a/src/pages/host-list/host-list.scss
+++ b/src/pages/host-list/host-list.scss
@@ -1,6 +1,6 @@
 page-host-list {
   .hosts {
-    background-image: url('/assets/img/wine.jpg');
+    background-image: url('../assets/img/wine.jpg');
   }
   .host-search {
     background-color: color($colors, medium);
