--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,6 +1,6 @@
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/v2/theming/
-$font-path: "../assets/fonts";
+$font-path: "assets/fonts";
 
 @import "ionic.globals";
 
